# swimmers

./: .eslintrc.json  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  Cargo.toml  DUELING_WIZARDS_REPORT_WEB_READER.md  FAQ.md  Makefile  QUICKSTART.md  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.web-tests.json  vite.config.js
.agents/: resume  setup
.agents/state/: resume-status.json  setup-status.json
.beads/: config.yaml  issues.jsonl
.buildooor/skillbox-config/clients/: swimmers
.claude/: CLAUDE.md
.codex/: config.toml
.github/workflows/: ci.yml  release.yml
.throngterm/: colors.json
assets/ascii/: sack_deep_sleep.txt
diagrams/: swimmers-project-status.mmdx
docs/: GLANCE_TEST_FIXTURES.md  MULTI_ENV_COCKPIT_PROOF.md  MULTI_SSH_ENV_V2_PROOF.md  RELEASE_V0_3_0.md  TROGDOR_WEB.md  TROGDOR_WEB_WORKGRAPH.md  VISION.md  parallel-agent-flow.mmdx  tmux-crash-evidence.md  tmux-hooks.md  trogdor-mode-web-frankentui-reality-check.mmdx  trogdor-swordsman-display-decision.mmd
docs/modes/: README.md
docs/modes/2026-04-09/: MODE_OUTPUT_A1.md  MODE_OUTPUT_A8.md  MODE_OUTPUT_B1.md  MODE_OUTPUT_F3.md  MODE_OUTPUT_F4.md  MODE_OUTPUT_F5.md  MODE_OUTPUT_F7.md  MODE_OUTPUT_H2.md  MODE_OUTPUT_I4.md  MODE_OUTPUT_L2.md
docs/reports/: 2026-06-01-agent-orchestration-landscape.md  oss-launch-playbook-2026-06-01.md
docs/reports/2026-06-18-multi-env-duel/: DUELING_WIZARDS_MULTI_ENV_REPORT.md  IDEATION_PROMPT.md  WIZARD_IDEAS_COD.md  WIZARD_IDEAS_GROK.md
public/: index.html
public/css/: style.css
public/js/: api.js  app.js  gestures.js  terminal-cache.js  terminal.js  thronglet.js  zone-manager.js
refactor/artifacts/web-migration-2026-06-05/: AXUM_VITE_FRONTEND_CONTRACT.md  ISOMORPHISM_LEDGER.md  MODULE_GRAPH.md  SCAN_COMMANDS.md  SUMMARY.md  VALIDATION_LEDGER.md  route-checksums.txt  route-source-manifest.json  served-route-contract.json
scripts/: ci-perf-gates.sh  clawgs-extract.sh  collect-tmux-crash-evidence.sh  generate-sprites.js  generate-thronglet-svgs.js  ghostty-open.scpt  install.sh  iterm-focus.scpt  key-dragon-sprites.py  release-acceptance-smoke.sh  release-notes-from-changelog.sh  remote-rust-validate.sh  run-kill.sh  run-tailnet.sh  run-tui.sh  run-up.sh  run-web.sh  smoke-native-assets-package.sh  smoke-native-open.sh  status-red-bead-coverage.sh  stress-dirs-concurrency.sh  test-glance-live.sh  test-live-proof-token-safety.sh  test-multi-env-cockpit.sh  test-multi-ssh-env-live.sh  test-multi-ssh-env-v2.sh  test-remote-auth-smoke.sh  test-run-tui.sh  test-run-up.sh  test-web-live-terminal.sh  test-web-visible-terminal.sh  test-web-workbench.sh  web-common.sh  zig-cc-rust-coverage.sh
server/: context-reader.js  index.js  scroll-guard.js  session-manager.js  state-detector.js  thought-loop.js
src/: advisory.rs  cli.rs  color.rs  config.rs  env_bootstrap.rs  fleet_lens.rs  host_actions.rs  launcher.rs  lib.rs  main.rs  openrouter_models.rs  operator_pressure.rs  repo_theme.rs  session_labels.rs  startup.rs  test_support.rs  thought_ui.rs  tmux_target.rs  types.rs
src/api/: bootstrap.rs  dirs.rs  envelope.rs  health.rs  mod.rs  native.rs  operator_pressure.rs  remote_sessions.rs  selection.rs  service.rs  service_directory.rs  session_git_diff.rs  session_mermaid.rs  sessions.rs  skills.rs  thought_config.rs  web_actions.rs
src/api/remote_sessions/: tests.rs
src/api/service/: attention_group.rs  group_membership.rs  repo_search.rs  tests.rs
src/api/sessions/: context_routes.rs  core_routes.rs  group_input.rs  pane_tail.rs  (+3 more)
src/auth/: mod.rs
src/cli/: tests.rs
src/metrics/: INTEGRATION_GUIDE.md  endpoint.rs  mod.rs
src/native/: attention_group.rs  ghostty_open.rs  host.rs  iterm.rs  mod.rs  osascript.rs  script_path.rs  support.rs  tests.rs  tmux_binary.rs
src/persistence/: file_store.rs
src/realtime/: codec.rs  handler.rs  mod.rs
src/scroll/: guard.rs
src/session/: actor.rs  artifact_responses.rs  artifacts.rs  mod.rs  overlay.rs  replay_ring.rs  skill_detection.rs  spawn_command.rs  supervisor.rs  tmux_discovery.rs
src/sprites/: discovery.rs  mod.rs
src/state/: detector.rs
src/thought/: bridge_runner.rs  context.rs  emitter_client.rs  health.rs  loop_runner.rs  mod.rs  probe.rs  protocol.rs  runtime_config.rs
src/types/: rest_state_tests.rs  tests.rs
src/web/: agent_context_refresh.js  agent_context_refresh.test.mjs  api_client.js  api_client.test.mjs  app.css  app.js  app_behavior.test.mjs  app_create_console.css  app_event_bindings.js  app_event_bindings.test.mjs  app_event_handlers.js  app_interaction_behavior.test.mjs  app_mobile.css  app_reduced_motion.css  app_scrollbar.css  app_sheet_results.css  app_sheets.css  app_trogdor.css  app_workbench_behavior.test.mjs  assets.rs  auth_sheet_island.d.ts  auth_sheet_island.js  auth_sheet_island.test.mjs  command_palette.js  command_palette.test.mjs  command_palette_controller.js  command_palette_controller.test.mjs  command_palette_island.d.ts  command_palette_island.js  command_palette_island.test.mjs  contracts.d.ts  contracts.js  contracts.test.mjs  create_sheet_island.d.ts  create_sheet_island.js  create_sheet_island.test.mjs  dir_browser.js  dir_browser.test.mjs  dir_browser_controller.js  dir_browser_controller.test.mjs  (+110 more)
test/: scroll-guard.test.js  state-detector.test.js
tests/: metamorphic.rs
tests/fixtures/: glance_state_coverage_10.json  multi_env_cockpit.json  multi_ssh_env_v2.json
tmux/: throngterm-clawgs-hooks.conf
video/src/: Compositions.tsx  theme.ts
web/: capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
web/public/: mobile-error.html
web/src/: app.tsx  main.tsx  style.css  types.ts
(+124 files in other folders)
