[package]
name = "swimmers"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A terminal aquarium for your tmux sessions — each session is an animated fish whose behavior reflects its real-time state"
repository = "https://github.com/build000r/swimmers"
homepage = "https://github.com/build000r/swimmers"
documentation = "https://docs.rs/swimmers"
readme = "README.md"
keywords = ["claude", "codex", "tmux", "tui", "agents"]
categories = ["command-line-utilities", "web-programming::http-server", "development-tools"]
authors = ["build000r <buildooor@gmail.com>"]
rust-version = "1.82"
exclude = [
    ".beads/",
    ".buildooor/",
    ".claude/",
    ".codex/",
    ".DS_Store",
    ".env",
    ".github/",
    ".mcp.json",
    ".modes_prompts/",
    ".ntm/",
    ".ruff_cache/",
    ".run/",
    ".swimmers/",
    "AGENTS.md",
    "AGENTS.md.bak",
    "beads_report_*.md",
    "data/",
    "docs/modes/",
    "DUELING_WIZARDS_REPORT.md",
    "FAQ.md",
    "lcov.info",
    "Makefile",
    "MODES_CONTEXT_PACK.md",
    "MODES_OF_REASONING_REPORT_AND_ANALYSIS_OF_PROJECT.md",
    "QUICKSTART.md",
    "refactor/",
    "SMART_RECOMMENDATION_CHAIN.md",
    "test-results/",
    "video/",
    "target/",
    "src/metrics/INTEGRATION_GUIDE.md",
]

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2.5"
portable-pty = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
regex = "1"
anyhow = "1"
thiserror = "2"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15.7"
crossterm = "0.29"
unicode-width = "0.1"
mermaid-rs-renderer = { version = "0.2.1", default-features = false }
resvg = "0.47.0"
usvg = "0.47.0"
walkdir = "2"
serde_yaml = "0.9.34"
dirs = "6.0.0"
clap = { version = "4", features = ["derive"] }
open = "5"
os_pipe = "1"
libc = "0.2"
crc32fast = "1.4"
fs2 = "0.4"
glob = "0.3"
cpal = { version = "0.17", optional = true }
whisper-rs = { version = "0.16", optional = true }

[dev-dependencies]
proptest = "1"
tempfile = "3"
tokio-tungstenite = "0.28"

[features]
# Compatibility switch for source workflows: the local repo/skill/commit-helper
# routes are now compiled into normal builds and controlled at runtime by
# SWIMMERS_PERSONAL_WORKFLOWS. This feature only changes their default from off
# to on for older source-build wrappers.
personal-workflows = []
voice = ["dep:cpal", "dep:whisper-rs"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
